--- a/style.css
+++ b/style.css
@@ -95,3 +95,14 @@ body {
   text-align: center;
   margin-top: 10px;
 }
+
+.reset {
+  background: none;
+  border: none;
+  padding: 10px;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  text-decoration: underline;
+  float: right;
+}
